# mcSCRAM

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
benchmarks/: bench_scram.py  benchmark_compiler.py  clean_benchmarks.sh  compiler.csv  extract_and_kill.py  input.csv
cmake/: FindBoost.cmake  FindLibXml2.cmake  Find_adaptivecpp.cmake  GenerateEmbeddedSchemas.cmake
input/: CMakeLists.txt
src/: CMakeLists.txt  alignment.cc  alignment.h  analysis.cc  analysis.h  bdd.cc  bdd.h  ccf_group.cc  ccf_group.h  cycle.cc  cycle.h  direct_eval.h  element.cc  element.h  env.cc  env.h  error.h  event.cc  event.h  event_tree.cc  event_tree.h  event_tree_analysis.cc  event_tree_analysis.h  expression.cc  expression.h  fault_tree.cc  fault_tree.h  fault_tree_analysis.cc  fault_tree_analysis.h  importance_analysis.cc  importance_analysis.h  initializer.cc  initializer.h  instruction.h  logger.cc  logger.h  mocus.cc  mocus.h  model.cc  model.h  (+30 more)
src/canopy/: CMakeLists.txt  analysis.cc  node.h  working_set.h
src/canopy/event/: node.h
src/canopy/kernel/: basic_event.h  gate.h  tally.h
src/canopy/queue/: kernel_builder.h  layer_manager.h  layer_manager.tpp  queueable.h  scheduler.h
src/expression/: boolean.h  conditional.cc  conditional.h  constant.cc  constant.h  exponential.cc  exponential.h  extern.cc  extern.h  numerical.cc  numerical.h  random_deviate.cc  random_deviate.h  test_event.cc  test_event.h
src/ext/: algorithm.h  bits.h  find_iterator.h  float_compare.h  index_map.h  linear_map.h  linear_set.h  multi_index.h  scope_guard.h  source_info.h  variant.h  version.cc  version.h
src/mc/: CMakeLists.txt  LICENSE  README.md  analysis.cc  direct_eval.h  importance_analysis.cc  preprocessor.cc  probability_analysis.cc  working_set.h
src/mc/core/: direct_eval.h  importance_analysis.cc  preprocessor.cc  probability_analysis.cc
src/mc/event/: node.h  sample_shape.h  weights.h
src/mc/kernel/: basic_event.h  gate.h  tally.h
src/mc/logger/: csv.h  log_benchmark.h  log_build.h  log_compressratio.h  log_convergence.h  log_layers.h  log_model.h  log_pdag.h  log_progress.h  log_sample_shaper.h  log_settings.h  log_tally.h  log_working_set.h
src/mc/prng/: philox128.h  sfc64.h  state128.h  wyrand.h  xorshift128.h
src/mc/queue/: kernel_builder.h  layer_manager.h  layer_manager.tpp  queueable.h  sample_shaper.h  scheduler.h  working_set.h
src/mc/scheduler/: convergence_controller.h  convergence_policy.h  iteration_shape.h  progressbar.h
src/mc/stats/: ci_utils.h  diagnostics.h  info_gain.h  tally.h  tally_node.h  tally_node_map.h
targets/scram/: CMakeLists.txt  main.cpp
targets/scram/utils/: ConstructOptions.h  ConstructSettings.h  ParseArguments.h  RunScram.h  XmlLogger.h
tests/: CMakeLists.txt  alignment_tests.cc  bench_200_event_tests.cc  bench_CEA9601_tests.cc  bench_attack.cc  bench_baobab1_tests.cc  bench_baobab2_tests.cc  bench_bscu_tests.cc  bench_chinese_tree_tests.cc  bench_core_tests.cc  bench_gas_leak.cc  bench_hipps_tests.cc  bench_lift_tests.cc  bench_ne574_tests.cc  bench_small_tree_tests.cc  bench_theatre_tests.cc  bench_three_motor_tests.cc  bench_two_train_tests.cc  ccf_group_tests.cc  element_tests.cc  event_tests.cc  expression_tests.cc  extern_function_tests.cc  fault_tree_tests.cc  initializer_tests.cc  linear_map_tests.cc  linear_set_tests.cc  pdag_tests.cc  performance_tests.cc  performance_tests.h  project_tests.cc  risk_analysis_tests.cc  risk_analysis_tests.h  scram_dummy_extern.cc  scram_unit_test_driver.cc.in  serialization_tests.cc  settings_tests.cc  test_scram_call.py  version_tests.cc  xml_stream_tests.cc
